[package]
name = "unshred-bencher"
version = "0.1.0"
edition = "2024"

[dependencies]
unshred = { git = "https://github.com/victory-man/unshred.git", package = "unshred", branch = "feat_async"}
unshred_0 = { git = "https://github.com/victory-man/unshred.git", package = "unshred", branch = "feat_baseline"}
unshred_1 = { git = "https://github.com/victory-man/unshred.git", package = "unshred", branch = "feat_wincode"}
tokio = "1.45.1"
tracing = "0.1.41"
anyhow = "1.0.100"
tracing-subscriber = "0.3.22"
hdrhistogram = "7.5.4"

[features]
default = ["async_version"]
origin_version = []
wincode_version = []
async_version = []

[profile.release]
debug = false
opt-level = 3

[profile.release_lto]
inherits = "release"
lto = "fat"
