[package]
name = "unshred-bencher"
version = "0.1.0"
edition = "2024"

[dependencies]
unshred = { git = "https://github.com/victory-man/unshred.git", package = "unshred", branch = "feat_mmsg_recv"}
unshred_0 = { git = "https://github.com/victory-man/unshred.git", package = "unshred", branch = "feat_baseline"}
unshred_1 = { git = "https://github.com/victory-man/unshred.git", package = "unshred", branch = "feat_wincode"}
unshred_2 = { git = "https://github.com/victory-man/unshred.git", package = "unshred", branch = "feat_zerocopy"}
tokio = "1.45.1"
tracing = "0.1.41"
anyhow = "1.0.100"
tracing-subscriber = "0.3.22"
hdrhistogram = "7.5.4"
hotpath = { version = "0.2.5", optional = true }
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[features]
default = ["async_version"]
origin_version = []
wincode_version = []
async_version = []
async_zerocopy_version = []
hotpath = ["hotpath/hotpath", "unshred/hotpath", "unshred_1/hotpath", "unshred_2/hotpath"]
xdp = ["unshred/xdp"]

[profile.release]
debug = false
opt-level = 3

[profile.release_lto]
inherits = "release"
lto = "fat"
